index build has incorrect phase after aborting for rollback

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 4.8.0
    • Affects Version/s: None
    • Component/s: Storage
    • Fully Compatible
    • ALL
    • Execution Team 2020-10-05
    • 37
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      On entering rollback, index builds are aborted and left in a state similar to that observed during a clean shutdown. If an index build is aborted (using the IndexBuildAborted error code) for rollback, MultiIndexBlock may erroneously reset the phase back to Initialized in the exception handling code.

            Assignee:
            Benety Goh (Inactive)
            Reporter:
            Benety Goh (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: