SERVER-51238 log resumable info when persisting index build state to disk